...
                            <constraint firstItem="AaB-Qb-X1G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fM1-ma-hsT"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ReB-uO-QwA" secondAttribute="bottom" id="gbi-Hr-pxg"/>
                            <constraint firstItem="AaB-Qb-X1G" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wVT-Lk-0Hg"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Movies" id="2Sg-7J-xNs">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="bGY-MR-u9f">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="addLocalMovie:" destination="BYZ-38-t0r" id="6aZ-ZB-8K2"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="iiK-d0-fhf" firstAttribute="bottom" secondItem="buj-i0-hxT" secondAttribute="bottom" id="n12-aE-WOp"/>
                            <constraint firstItem="v5p-yU-5Yb" firstAttribute="width" secondItem="ITd-IS-XVE" secondAttribute="width" id="rip-Ec-mpD"/>
                            <constraint firstItem="buj-i0-hxT" firstAttribute="top" secondItem="iiK-d0-fhf" secondAttribute="top" id="ykC-6D-V09"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="iiK-d0-fhf"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Movie" id="lqH-IO-rHO">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="VRD-as-4AE">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="cancelButtonPressed:" destination="A3h-qg-yAg" id="E7N-mY-Uo7"/>
                            </connections>
                        </barButtonItem>
...
