...
    }
    
    // MARK: - IBActions
    
    @IBAction func saveButtonPressed(_ sender: UIBarButtonItem) {
        guard let movieTitle = titleTextField.text, !movieTitle.isEmpty else {
            presentAlert(withTitle: "Movie Title Required", message: "Please enter a title for your awesome movie 🔥.")
            return
        }
        guard let movieOverview = overviewTextField.text, !movieOverview.isEmpty else {
            presentAlert(withTitle: "Movie Overview Required", message: "Please enter an overview for your awesome movie 🔥.")
            return
        }
...
